[package]
name = "icm20689_driver_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["no-std", "imu", "embedded-hal-driver", "embedded-hal", "icm20689"]
categories = ["embedded", "hardware-support", "no-std"]
description = "platform independant Drivers for the ICM20689 6 axis IMU with embedded-hal"
authors = ["Deepesh Padala"]
repository = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "^0.2.4"
